--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=api-grades
-server.port=8080
+server.port=8084
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
@@ -8,7 +8,10 @@ spring.datasource.url=jdbc:mysql://${DB_ENDPOINT}:${DB_PORT}/${DB_NAME}?useSSL=f
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.platform=mysql
+spring.sql.init.platform=mysql
+
+# Configuracion de API REST USERS
+users.api.url=${API_USER_URL}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto=drop-and-create
